# arcaflow-plugin-smallfile

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  smallfile_plugin.py  smallfile_schema.py  test_smallfile_plugin.py
.github/workflows/: build.yaml  carpenter.yaml  carpenter_build.yaml  carpenter_push.yaml  workflow.yaml
arcaflow_plugin_smallfile/: smallfile_plugin.py  smallfile_schema.py
tests/: test_arcaflow_plugin_smallfile.py
