[tool.poetry]
name = "arcaflow-plugin-smallfile"
version = "0.1.0"
description = "arcaflow plugin for smallfile"
authors = ["arcalot"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"
packages = [{include = "smallfile_plugin.py", from="."}]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.9.0"
numpy = "^1.23.4"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
